kubernetes/overseerr/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: overseerr
  namespace: overseerr
spec:
  type: LoadBalancer
  ports:
  - port: 5055
    protocol: TCP
    targetPort: 5055
  selector:
    app: overseerr
