kubernetes/overseerr/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: overseerr
  namespace: overseerr
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`request.tehmatt.com`)
    kind: Rule
    services:
    - name: overseerr
      port: 5055
  tls: {}
